Changed demo name.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="Test of canvas on Gear 2 wearable"/>
 
-    <title>Classy Test</title>
+    <title>Glob Test</title>
     
     <div id="canvasDiv" align="center">
     </div>
