Added IO, Resource, and base engine classes.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,24 @@
     </div>
 
     <!-- Javascript Object Engine components -->
-    <script type="text/javascript" src="js/glob.js"></script>
-    <script type="text/javascript" src="js/math.js"></script>
-    <script type="text/javascript" src="js/util.js"></script>
-    <script type="text/javascript" src="js/listeners.js"></script>
+    <script type="text/javascript" src="js/Glob.js"></script>
+    <script type="text/javascript" src="js/Strings.js"></script>
+    <script type="text/javascript" src="js/Math.js"></script>
+    <script type="text/javascript" src="js/Util.js"></script>
+    <script type="text/javascript" src="js/Listeners.js"></script>
+    <script type="text/javascript" src="js/Graphics.js"></script>
+    <script type="text/javascript" src="js/GameState.js"></script>
+    <script type="text/javascript" src="js/UpdateLoop.js"></script>
+
+    <script type="text/javascript" src="js/Resources/Resources.js"></script>
+    <script type="text/javascript" src="js/Resources/FontEx.js"></script>
+    <script type="text/javascript" src="js/Resources/Sound.js"></script>
+
+    <script type="text/javascript" src="js/IO/KeyInput.js"></script>
+    <script type="text/javascript" src="js/IO/MouseInput.js"></script>
+    <script type="text/javascript" src="js/IO/Multitouch.js"></script>
+    <script type="text/javascript" src="js/IO/TouchToMouse.js"></script>
+    <script type="text/javascript" src="js/IO/Accelerometer.js"></script>
 
 <!-- TESTS
 -->
