--- a/globTest.html
+++ b/globTest.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="Glob Engine tests"/>
 
-    <title>Glob Game Test</title>
+    <title>Glob Test</title>
     
     <div id="canvasDiv" align="center">
-      <canvas id="canvas" width="1024" height="768"></canvas>
     </div>
 
     <!-- Javascript Object Engine components -->
@@ -34,7 +33,7 @@
 <!-- TESTS
 -->
 
-    <script src="gameTest.js"></script>
+    <script src="globTest.js"></script>
 
 </head>
 
