Fixed bug in class constructor; updated Pomax Font class.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="js/UpdateLoop.js"></script>
 
     <script type="text/javascript" src="js/Resources/Resources.js"></script>
+    <script type="text/javascript" src="js/Resources/Font.js"></script>
     <script type="text/javascript" src="js/Resources/FontEx.js"></script>
     <script type="text/javascript" src="js/Resources/Sound.js"></script>
 
