Added basic PubNub support.

--- a/netTest.html
+++ b/netTest.html
@@ -11,9 +11,8 @@
       <canvas id="canvas" width="1024" height="768"></canvas>
     </div>
 
-    <!-- PubNub
+    <!-- PubNub -->
     <script src="http://cdn.pubnub.com/pubnub-3.7.1.min.js"></script>
-     -->
 
     <!-- Javascript Object Engine components -->
     <script type="text/javascript" src="js/Glob.js"></script>
@@ -36,10 +35,12 @@
     <script type="text/javascript" src="js/IO/TouchToMouse.js"></script>
     <script type="text/javascript" src="js/IO/Accelerometer.js"></script>
 
+    <script type="text/javascript" src="js/Network/Pubnub.js"></script>
+
 <!-- TESTS
 -->
 
-    <script src="gameTest.js"></script>
+    <script src="pubnubTest.js"></script>
 
 </head>
 
