Added support for spritesheets and sprites.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <script type="text/javascript" src="js/GameState.js"></script>
     <script type="text/javascript" src="js/UpdateLoop.js"></script>
 
+    <script type="text/javascript" src="js/Physics/PhysicsModules.js"></script>
+    <script type="text/javascript" src="js/Sprites/SpriteSheet.js"></script>
+    <script type="text/javascript" src="js/Sprites/Sprite.js"></script>
+
     <script type="text/javascript" src="js/Resources/Resources.js"></script>
     <script type="text/javascript" src="js/Resources/Font.js"></script>
     <script type="text/javascript" src="js/Resources/FontEx.js"></script>
