Added basic widget and GUI labels.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="js/Graphics.js"></script>
     <script type="text/javascript" src="js/GameState.js"></script>
     <script type="text/javascript" src="js/UpdateLoop.js"></script>
+    <script type="text/javascript" src="js/UpdateLoop.js"></script>
 
     <script type="text/javascript" src="js/Physics/PhysicsModules.js"></script>
     <script type="text/javascript" src="js/Sprites/SpriteSheet.js"></script>
