Bug fixes. Added Transition behaviors.

--- a/netTest.html
+++ b/netTest.html
@@ -15,25 +15,33 @@
     <script src="http://cdn.pubnub.com/pubnub-3.7.1.min.js"></script>
 
     <!-- Javascript Object Engine components -->
-    <script type="text/javascript" src="js/Glob.js"></script>
-    <script type="text/javascript" src="js/Strings.js"></script>
-    <script type="text/javascript" src="js/Math.js"></script>
-    <script type="text/javascript" src="js/Util.js"></script>
-    <script type="text/javascript" src="js/Listeners.js"></script>
-    <script type="text/javascript" src="js/Graphics.js"></script>
-    <script type="text/javascript" src="js/GameState.js"></script>
-    <script type="text/javascript" src="js/UpdateLoop.js"></script>
+    <script type="text/javascript" src="./js/Glob.js"></script>
+    <script type="text/javascript" src="./js/Strings.js"></script>
+    <script type="text/javascript" src="./js/Math.js"></script>
+    <script type="text/javascript" src="./js/Util.js"></script>
+    <script type="text/javascript" src="./js/Listeners.js"></script>
+    <script type="text/javascript" src="./js/Graphics.js"></script>
+    <script type="text/javascript" src="./js/GameState.js"></script>
+    <script type="text/javascript" src="./js/UpdateLoop.js"></script>
+    <script type="text/javascript" src="./js/Transitions.js"></script>
 
-    <script type="text/javascript" src="js/Resources/Resources.js"></script>
-    <script type="text/javascript" src="js/Resources/Font.js"></script>
-    <script type="text/javascript" src="js/Resources/FontEx.js"></script>
-    <script type="text/javascript" src="js/Resources/Sound.js"></script>
+    <script type="text/javascript" src="./js/GUI/GUI.js"></script>
+    <script type="text/javascript" src="./js/GUI/Label.js"></script>
 
-    <script type="text/javascript" src="js/IO/KeyInput.js"></script>
-    <script type="text/javascript" src="js/IO/MouseInput.js"></script>
-    <script type="text/javascript" src="js/IO/Multitouch.js"></script>
-    <script type="text/javascript" src="js/IO/TouchToMouse.js"></script>
-    <script type="text/javascript" src="js/IO/Accelerometer.js"></script>
+    <script type="text/javascript" src="./js/Physics/PhysicsModules.js"></script>
+    <script type="text/javascript" src="./js/Sprites/SpriteSheet.js"></script>
+    <script type="text/javascript" src="./js/Sprites/Sprite.js"></script>
+
+    <script type="text/javascript" src="./js/Resources/Resources.js"></script>
+    <script type="text/javascript" src="./js/Resources/Font.js"></script>
+    <script type="text/javascript" src="./js/Resources/FontEx.js"></script>
+    <script type="text/javascript" src="./js/Resources/Sound.js"></script>
+
+    <script type="text/javascript" src="./js/IO/KeyInput.js"></script>
+    <script type="text/javascript" src="./js/IO/MouseInput.js"></script>
+    <script type="text/javascript" src="./js/IO/Multitouch.js"></script>
+    <script type="text/javascript" src="./js/IO/TouchToMouse.js"></script>
+    <script type="text/javascript" src="./js/IO/Accelerometer.js"></script>
 
     <script type="text/javascript" src="js/Network/Pubnub.js"></script>
 
