Bug fixes and UI improvements.

--- a/netTest.html
+++ b/netTest.html
@@ -27,6 +27,7 @@
 
     <script type="text/javascript" src="./js/GUI/GUI.js"></script>
     <script type="text/javascript" src="./js/GUI/Label.js"></script>
+    <script type="text/javascript" src="./js/GUI/Panel.js"></script>
 
     <script type="text/javascript" src="./js/Physics/PhysicsModules.js"></script>
     <script type="text/javascript" src="./js/Sprites/SpriteSheet.js"></script>
